--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="/acaphp/">
+    <base href="/AcademiepourTous/">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=egde" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,7 +17,7 @@
     <div class="mx-5 my-5">
         <a href="#" class="flex items-center">
             <img src="assets/image/Logo.webp" class="h-13 mr-3"/>
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">L'ACADEMIE POUR TOUS</span>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">L'ACADEMIE POUR TOUS</span>
         </a>
     </div>
     <!-- <h1 class="m-3 border-4 border-red-600"> 06 11 01 60 83</h1> -->
@@ -68,7 +68,7 @@
 
 </script>
 
-<body class="dark:bg-neutral-700">
+<body>
 
 
 
