--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@
 
 }
 
+
+
 @media (max-width: 768px) {
     .navbar-menu {
       display: none;
@@ -26,3 +28,13 @@
     display: none;
 }
 
+/* GOOGLE font */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+}
