--- a/views/header.html
+++ b/views/header.html
@@ -13,6 +13,14 @@
     <title>Accueil - L'academie pour tous</title>
 </head>
 
+<style>
+    .positionav{
+        position: sticky;
+        top: 0;
+    }
+
+</style>
+
 <header>
     <div class="mx-5 my-5">
         <a href="#" class="flex items-center">
@@ -21,7 +29,7 @@
         </a>
     </div>
     <!-- <h1 class="m-3 border-4 border-red-600"> 06 11 01 60 83</h1> -->
-    <nav class="navbar">
+    <nav class="navbar positionav">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <button data-collapse-toggle="navbar-default" type="button" class="navbar-menu-toggle inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
