BDD connection + registration form ok with password hash

--- a/views/header.html
+++ b/views/header.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 
-<!--    <link rel="stylesheet" href="./node_modules/tw-elements/dist/css/tw-elements.min.css">-->
+    <!--    <link rel="stylesheet" href="./node_modules/tw-elements/dist/css/tw-elements.min.css">-->
     <script defer src="./node_modules/tw-elements/dist/js/tw-elements.umd.min.js">
-    <script defer src="assets/js/script.js"></script>
+        <script defer src="assets/js/script.js"></script>
     <title>Accueil - L'academie pour tous</title>
 </head>
 
@@ -18,7 +18,7 @@
     <div class="mx-5 my-5">
         <a href="#" class="flex items-center">
             <img src="assets/image/logo_transparent.png" class="h-13 mr-3 h-24 hover:text-red-700"/>
-<!--            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">L'ACADEMIE POUR TOUS</span>-->
+            <!--            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">L'ACADEMIE POUR TOUS</span>-->
         </a>
     </div>
     <!-- <h1 class="m-3 border-4 border-red-600"> 06 11 01 60 83</h1> -->
@@ -46,7 +46,7 @@
                         <a href="./views/contactView.php" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
                     </li>
                     <li>
-                        <a href="./views/signupView.php" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-blue-700 dark:hover:text-white md:dark:hover:bg-transparent">Inscription</a>
+                        <a href="signupController/addOneUsers" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-blue-700 dark:hover:text-white md:dark:hover:bg-transparent">Inscription</a>
                     </li>
                     <li>
                         <a href="./views/loginView.php" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-green-700 dark:hover:text-white md:dark:hover:bg-transparent">Connexion</a>
