--- a/views/footer.html
+++ b/views/footer.html
@@ -1,4 +1,4 @@
-
+</body>
 <footer class="navbar">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
