--- a/views/footer.html
+++ b/views/footer.html
@@ -5,7 +5,10 @@
             <div class="mb-6 md:mb-0">
                 <a href="#" class="flex items-center">
                     <img src="assets/image/Logo.webp" class="h-8 mr-3" />
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">L'ACADEMIE POUR TOUS</span>
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">L'ACADEMIE POUR TOUS <br> 18 Rue Goubet 75019 Paris
+
+                    </span>
+
                 </a>
             </div>
 
@@ -13,11 +16,16 @@
                 <div>
                     <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Nous Contacter</h2>
                     <ul class="text-gray-600 dark:text-gray-400 font-medium">
-                        <li class="mb-4">
-                            <a href="#" class="hover:underline">Privacy Policy</a>
+                        <li class="">
+                            <a href="#" class="hover:underline">06 11 01 60 83</a>
                         </li>
+
                         <li>
-                            <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                            <a href="./views/contactView.php" class="hover:underline">academiepourtous19@gmail.com </a>
+                        </li>
+
+                        <li>
+                            <a href="./views/contactView.php" class="hover:underline">Contactez-Nous</a>
                         </li>
                     </ul>
                 </div>
