--- a/views/footer.html
+++ b/views/footer.html
@@ -17,11 +17,11 @@
                     <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Nous Contacter</h2>
                     <ul class="text-gray-600 dark:text-gray-400 font-medium">
                         <li class="">
-                            <a href="#" class="hover:underline">06 11 01 60 83</a>
+                            <a href="tel:+33611016083" class="hover:underline">06 11 01 60 83</a>
                         </li>
 
                         <li>
-                            <a href="./views/contactView.php" class="hover:underline">academiepourtous19@gmail.com </a>
+                            <a href="mailto:academiepourtous19@gmail.com" class="hover:underline">academiepourtous19@gmail.com </a>
                         </li>
 
                         <li>
