update of the page about us

--- a/assets/css/styleaca.css
+++ b/assets/css/styleaca.css
@@ -152,3 +152,8 @@
 }
 
 /*ICI SE TERMINE LE STYLE CSS POUR LE BOTTOM MODAL DE LA PAGE RESERVATION COURS*/
+
+
+.colorintro{
+    text-shadow: 1px 1px 0 #000000;
+}
