small update of presentation elements

--- a/assets/css/styleaca.css
+++ b/assets/css/styleaca.css
@@ -4,6 +4,10 @@
 
 }
 
+.foricone{
+    height: 24px;
+    width: 24px;
+}
 
 
 
@@ -157,3 +161,4 @@
 .colorintro{
     text-shadow: 1px 1px 0 #000000;
 }
+
