--- a/views/footer.html
+++ b/views/footer.html
@@ -4,7 +4,7 @@
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0">
                 <a href="#" class="flex items-center">
-                    <img src="assets/image/Logo.webp" class="h-8 mr-3" />
+                    <img src="assets/image/Logo.png" class="h-10 mr-3" />
                     <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">L'ACADEMIE POUR TOUS <br> 18 Rue Goubet 75019 Paris
 
                     </span>
